* ext/openssl/ossl_ssl.c (ssl_npn_select_cb_common): Fix compile error   with old version of fcc (Fujitsu C Compiler) on Solaris 10.   [Bug #12769] [ruby-dev:49809]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@56173 b2dd03c8-39d4-4d8f-98ff-823fe69b080e